# layer-is-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
layeris/: __init__.py  layer_image.py
layeris/test/: test.py
layeris/utils/: channels.py  conversions.py  data_type.py  hsl.py  layers.py
src/layeris/: layer_image.py
src/layeris/blend/: __init__.py
src/layeris/channels/: __init__.py  operations.py
src/layeris/color/: __init__.py  conversions.py  hsl.py
tests/: conftest.py  test_conversions.py  test_layer_image.py  test_utils.py
