[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "layeris"
version = "0.2.0"
description = "An open source image processing library that supports blend modes, curve adjustment, and other adjustments used by graphic designers or photographers."
readme = "README.md"
authors = [{ name = "Ye Joo Park", email = "subwaymatch@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "requests>=2.31",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/subwaymatch/layer-is-python"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["layeris"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
