[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layeris"
version = "0.2.0"
description = "An open source image processing library that supports blend modes, curve adjustment, and other adjustments that graphic designers or photographers frequently use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Ye Joo Park", email = "subwaymatch@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
    "Pillow>=9.0",
    "requests>=2.22",
]

[project.urls]
Homepage = "https://github.com/subwaymatch/layer-is-python"

[tool.hatch.build.targets.wheel]
packages = ["layeris"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
