[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layeris"
dynamic = ["version"]
description = "An open source image processing library that supports blend modes, curve adjustment, and other adjustments that graphic designers or photographers frequently use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ye Joo Park", email = "subwaymatch@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
    "Pillow>=9.0",
    "requests>=2.22",
]

[tool.hatch.version]
path = "src/layeris/__about__.py"

[project.urls]
Homepage = "https://github.com/subwaymatch/layer-is-python"

[tool.hatch.build.targets.wheel]
packages = ["src/layeris"]

[tool.hatch.build.targets.sdist]
include = ["src/layeris"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov = "pytest --cov=layeris --cov-report=term-missing"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
